--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://FizKw.github.io/PerCiLokMovies",
+  "homepage": ".",
   "name": "projek",
   "version": "0.1.0",
   "private": true,
